--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,45 +28,6 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="32dp" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_name">
-
-        <RadioButton
-            android:id="@+id/latest_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Последние"
-            android:checked="true"
-            />
-
-        <RadioButton
-            android:id="@+id/top_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Лучшие"
-            />
-
-        <RadioButton
-            android:id="@+id/hot_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Горячие"
-            />
-
-
-    </RadioGroup>
-
-
-
-
     <TextView
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
@@ -79,6 +40,41 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
         app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_name">
+
+        <RadioButton
+            android:id="@+id/latest_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:checked="true"
+            android:text="@string/menu_title_new" />
+
+        <RadioButton
+            android:id="@+id/top_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="@string/menu_title_top" />
+
+        <RadioButton
+            android:id="@+id/hot_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="@string/menu_title_hot" />
+
+    </RadioGroup>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/gif_card"
@@ -99,15 +95,24 @@
             android:scaleType="fitXY"
             tools:srcCompat="@tools:sample/avatars" />
 
-
     </androidx.cardview.widget.CardView>
+
+    <ProgressBar
+        android:id="@+id/loadingBar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/gif_card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/gif_card" />
 
     <TextView
         android:id="@+id/description_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/custom_image_view"
         android:gravity="center"
@@ -147,30 +152,16 @@
         app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
         app:layout_constraintTop_toBottomOf="@+id/description_text" />
 
-    <ProgressBar
-        android:id="@+id/loadingBar"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:indeterminate="true"
-        app:layout_constraintBottom_toBottomOf="@+id/gif_card"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/gif_card"
-        app:layout_constraintVertical_weight="6" />
-
     <Button
         android:id="@+id/reboot_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:background="@android:color/transparent"
         android:text="@string/reboot_button_text"
         android:textColor="@color/main_color"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/gif_card"
         app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
-        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="@+id/guideline_vertical" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
